:boom: add code for creating a character and saveing it to the DOM.
Co-authored-by: James Wyn <thisisjameswyn@gmail.com>

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,7 @@
 body {
     background: linear-gradient(grey,blue);
+    height: 100vh;
 }
-#character-create {
+#character-create, #current-stats {
   padding: 30px;
 }
